@@ -86,6 +86,7 @@ fixed bugs:
 - fixed compilation issues with negate() function in intervalarith.c on exotic platforms
 - gams writer now also substitutes $-sign from variable/equation names
 - fixed bug in SCIPsortedvecDelPos...() templates
+- fixed bug in heur_shiftandpropagate.c concerning the treatment of unbounded variables
 
 parameters:
 - changed parameter "propagating/pseudoobj/maxcands" to "propagating/pseudoobj/minuseless" (see prop_pseudoobj.c)
